# llm-router

./: LICENSE  README.md  pyproject.toml
conf/: config.yaml
conf/experts/: professor.yaml  zoomer.yaml
conf/router/: hybrid.yaml  semantic.yaml
scripts/: run_server.sh  setup_ollama.sh
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/core/: __init__.py  llm_client.py  protocols.py  router_strategy.py
src/forensics/: __init__.py  benchmark_suite.py  dpo_pipeline.py  logger.py
