[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-router"
version = "0.1.0"
description = "High-Performance Semantic Orchestration for Distributed LLM Systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

